Fix Render deployment issues: Update Tailwind to v3, fix ESLint apostrophe errors, optimize build config

--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,11 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd landing && npm ci && npm run build
+    buildCommand: cd landing && npm install && npm run build
     startCommand: cd landing && npm start
     healthCheckPath: /
     envVars:
       - key: NODE_ENV
         value: production
       - key: NEXT_TELEMETRY_DISABLED
-        value: "1"
-    domains:
-      - thetamind.onrender.com 
+        value: "1" 
