--- a/landing/package.json
+++ b/landing/package.json
@@ -2,13 +2,15 @@
   "name": "theta-mind",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && npm start",
-    "postinstall": "npm run build"
+    "deploy": "npm run build && npm start"
   },
   "dependencies": {
     "react": "^19.0.0",
