--- a/landing/package.json
+++ b/landing/package.json
@@ -13,20 +13,20 @@
     "deploy": "npm run build && npm start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "next": "15.3.4",
+    "postcss": "^8.4.32",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "tailwindcss": "^3.4.0",
+    "@types/node": "20.19.1",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "^19",
+    "typescript": "5.8.3",
+    "@eslint/eslintrc": "^3",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
   }
 }
